streamingress/stream-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-ingress
  labels:
    app: streaming-application
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: "http://streaming.cessmedia.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: streaming-svc
            port:
              number: 80
